hopefully fixed s logo too large on mobile?

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,8 +22,8 @@ body > .container {
 }
 
 .ef-logo {
-  width: 100%;
-  /*height: 100%;*/
+  /*width: 100%;*/
+  height: 100%;
 }
 
 .ef-sign-in {
